# codex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: pyproject.toml  ruff.toml
api/app/: main.py
api/app/api/: __init__.py  routes.py
api/app/core/: settings.py
api/app/models/: __init__.py
api/app/services/: __init__.py
api/tests/: test_smoke.py
api/tests/api/: test_health.py
assets/: README.md
compose/dev/: docker-compose.yml
docs/: ARCHITECTURE.md
infra/kubernetes/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
infra/kubernetes/charts/: README.md
infra/kubernetes/environments/dev/: kustomization.yaml  patch-configmap.yaml  patch-deployment.yaml
infra/kubernetes/environments/prod/: kustomization.yaml  patch-configmap.yaml  patch-deployment.yaml
infra/kubernetes/environments/stage/: kustomization.yaml  patch-configmap.yaml  patch-deployment.yaml
infra/terraform/: README.md
infra/terraform/environments/dev/: backend.tf  main.tf  variables.tf
infra/terraform/environments/prod/: backend.tf  main.tf  variables.tf
infra/terraform/environments/stage/: backend.tf  variables.tf
infra/terraform/modules/data/: main.tf  variables.tf
infra/terraform/modules/networking/: main.tf  variables.tf
infra/terraform/modules/services/: main.tf  variables.tf
