[tool.poetry]
name = "multi-stack-template"
version = "0.1.0"
description = "Starter template combining Terraform, Kubernetes, and FastAPI components."
authors = ["Example Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "app", from = "api" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"
ruff = "^0.1.9"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
