[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "halulunyan",email = "rat5nna11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.0,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
